# EspressoStudio

./: .gitignore  CLAUDE.md  README.md
app/: package-lock.json  package.json
app/src/main/: engineLink.js  index.js
app/src/preload/: index.js
app/src/renderer/: index.html
app/src/renderer/src/: App.svelte  main.js  stores.js  tokens.css
app/src/renderer/src/components/: Arrange.svelte  FxPanel.svelte  GuitarRig.svelte  Knob.svelte  TrackList.svelte  TransportBar.svelte
engine/: CMakeLists.txt
engine/src/: Main.cpp  NamAmpPlugin.cpp  NamAmpPlugin.h
scripts/: engine-ctl.sh  setup-bridge.sh
test/: protocol-v1-client.mjs  protocol-v2-client.mjs  spike-client.mjs
